--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "cross-env NODE_ENV=test mocha ./test/**/*.js",
+    "test:watch": "npm t -- --watch"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -14,7 +16,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "7.19.6",
+    "@babel/register": "7.18.9",
+    "chai": "4.3.6",
+    "chai-as-promised": "7.1.1",
+    "cross-env": "7.0.3",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "mocha": "10.1.0",
+    "sinon": "14.0.1"
   }
 }
