--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "npm t -- --watch"
   },
   "dependencies": {
+    "mongodb": "^4.11.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
