--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "test:watch": "npm t -- --watch"
   },
   "dependencies": {
-    "mongodb": "^4.11.0",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dropdown-menu": "^2.0.1",
+    "@radix-ui/react-popover": "^1.0.2",
+    "@stitches/react": "^1.2.8",
+    "mongodb": "4.11.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
